The store job can fail if the itemset is empty.

Since we're too lazy to check what's available, we simply ignore errors.
Any actually IMAP compliant server shouldn't require this step anyways.

BUG: 287903